fix/workaround [#31555] Username with special chars in Windows 7

Theres a bug where python/windows ignores PYTHONIOENCODING, workaround this by manually overriding the stdout/stderr.